--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal1.jpg" alt="">
+								<img src="img/personal.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
@@ -182,6 +182,7 @@
         </section>
         <!--================End Welcome Area =================-->
         
+		
         <!--================My Tabs Area =================-->
         <section class="mytabs_area p_120">
         	<div class="container">
